--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+
+# build dirs
+build/
+
+# misc
+CLAUDE.md
+.claude/
+
+# torrent
+*.torrent
+.torrent.db
