--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,5 +1,6 @@
 # Silmaril Configuration File
-# Copy this to config.yaml and customize as needed
+# Copy this to ~/.config/silmaril/config.yaml and customize as needed
+# Or run 'silmaril init' to automatically generate this file
 
 # Storage configuration
 storage:
@@ -21,16 +22,18 @@ network:
     - "router.bittorrent.com:6881"
     - "dht.transmissionbt.com:6881"
     - "router.utorrent.com:6881"
-  dht_port: 0  # 0 = random port
+  dht_port: 0  # 0 = random port (allows multiple instances)
   
   # BitTorrent network settings
-  listen_port: 0          # 0 = random port
+  listen_port: 0          # 0 = random port (allows multiple instances)
   max_connections: 100
   upload_rate_limit: 0    # bytes/sec, 0 = unlimited
   download_rate_limit: 0  # bytes/sec, 0 = unlimited
   
-  # We use DHT only, no trackers
-  disable_trackers: true
+  # Tracker usage (we prefer DHT for decentralization)
+  disable_trackers: true   # Set to false if you want to use trackers
+  disable_webtorrent: true # WebTorrent not needed for our use case
+  disable_pex: false       # Peer Exchange helps with discovery
 
 # Torrent configuration
 torrent:
@@ -48,6 +51,7 @@ ui:
 
 # Security configuration
 security:
-  sign_manifests: true
-  verify_manifests: true
-  keys_dir: ""  # Default: base_dir/keys
+  sign_manifests: true    # Sign model manifests with Ed25519
+  verify_manifests: true  # Verify signatures on downloaded manifests
+  verify_checksums: true  # Verify file checksums from manifests
+  keys_dir: ""           # Default: base_dir/keys
