--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,6 +1,13 @@
 # Silmaril Configuration File
 # Copy this to ~/.config/silmaril/config.yaml and customize as needed
 # Or run 'silmaril init' to automatically generate this file
+#
+# Architecture Notes:
+# - Silmaril uses a daemon/client architecture
+# - The daemon runs in the background handling all P2P operations
+# - The CLI is a thin client that communicates with the daemon via REST API
+# - Multiple CLI commands can run simultaneously
+# - The daemon maintains persistent DHT connections and continues seeding
 
 # Storage configuration
 storage:
@@ -23,6 +30,11 @@ network:
     - "dht.transmissionbt.com:6881"
     - "router.utorrent.com:6881"
   dht_port: 0  # 0 = random port (allows multiple instances)
+  
+  # BEP 44 Discovery Settings
+  bep44_enabled: true     # Use BEP 44 mutable items for model discovery
+  publisher_key: ""       # Path to Ed25519 private key (auto-generated if empty)
+  refresh_interval: 300   # Seconds between DHT index refreshes
   
   # BitTorrent network settings
   listen_port: 0          # 0 = random port (allows multiple instances)
@@ -55,3 +67,30 @@ security:
   verify_manifests: true  # Verify signatures on downloaded manifests
   verify_checksums: true  # Verify file checksums from manifests
   keys_dir: ""           # Default: base_dir/keys
+
+# Daemon configuration
+daemon:
+  # API server settings
+  port: 8737              # REST API port (like Ollama's 11434)
+  host: 127.0.0.1        # Bind to localhost only for security
+  
+  # Daemon behavior
+  auto_start: true       # CLI auto-starts daemon if not running
+  persist_state: true    # Save state between restarts
+  max_idle_time: 0       # Minutes before daemon auto-stops (0 = never)
+  
+  # Paths
+  log_file: ""           # Default: base_dir/daemon/daemon.log
+  data_dir: ""           # Default: base_dir/daemon
+  pid_file: ""           # Default: base_dir/daemon/daemon.pid
+  state_file: ""         # Default: base_dir/daemon/state.json
+  
+  # Performance
+  cleanup_interval: 3600  # Seconds between cleanup tasks
+  stats_interval: 30      # Seconds between stats updates
+
+# Remote daemon configuration (optional)
+# Uncomment to connect to a daemon on another machine
+# remote:
+#   url: "http://remote-host:8737"  # Remote daemon URL
+#   auth_token: ""                   # Optional authentication token
